--- a/style.css
+++ b/style.css
@@ -11,10 +11,13 @@
   --min-color: #033a80;
   --bg-color: #fff;
   --text-color: #0f0c27;
-  --hover: hsl(260, 100%, 51%);
+  --hover: red;
   --big-font: 3.2rem;
   --medium-font: 1.8rem;
   --p-font: 0.941rem;
+}
+ span{
+  color: red;
 }
 body {
   background-color: var(--bg-color);
@@ -119,6 +122,9 @@ header {
   color: var(--hover);
   font-size: 28px;
 }
+a:link{
+  text-decoration: none;
+}
 .btn {
   display: inline-block;
   background-color: var(--min-color);
@@ -170,90 +176,55 @@ header {
   font-weight: 400;
   margin-left: 1rem;
 }
-.skills-container {
-  display: flex;
-  grid-template-columns: repeat(2, 1fr);
-  align-items: center;
-  gap: 2rem;
-  margin-top: 4rem;
-}
-.skills-img img {
-  width: 95%;
-  padding-left: 20rem;
-  object-position: center;
-}
-.bars-box {
+
+
+.container{
+  height: 350px;
+  margin: auto;
   position: relative;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem 0;
-  margin-bottom: 1rem;
-}
-.bars-box h1,
-.bars-box span {
-  font-size: 1.1rem;
-  font-weight: 500;
-}
-.bars-box span {
-  padding-left: 190%;
-}
-.light-bars {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 250%;
-  height: 0.5rem;
-  background: hsl(260, 100%, 44%, 0.4);
-  border-radius: 0.5rem;
-}
-.percent-bar {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 0.5rem;
-  background: var(--min-color);
-  border-radius: 0.5rem;
-}
-.html-bar {
-  width: 210%;
-}
-.css-bar {
-  width: 150%;
-}
-.js-bar {
-  width: 120%;
-}
-.project-content {
+  width: 90%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, auto));
-  justify-content: center;
-  gap: 1rem;
-  margin-top: 2rem;
+  place-items: center;
+  overflow: hidden;
+  
 }
-.project-box {
-  padding: 20px;
-  width: 260px;
+.slide-container{
   display: flex;
-  flex-direction: column;
+  width: calc(250px*8);
+  animation: scroll 20s linear infinite;
+
+}
+@keyframes scroll {
+    0%{
+      transform: translateX(0);
+
+    }
+    100%{
+      transform: translateX(calc(-250px *10));
+    }
+}
+.slide-image{
+
+  
+  display: flex;
   align-items: center;
-  text-align: center;
-  border-radius: 0.5rem;
-  border-bottom: 2px solid var(--min-color);
-  box-shadow: 0 2px 7px rgba(14 55 54 / 15%);
+  padding: 15px;
+  perspective: 100px;
+  box-shadow: 0px 3px 15px rgba(113,115,119,1);
+  border-radius: 50px;
+  margin: 25px;
+  padding:20px;
 }
-.project-box a {
-  color: var(--min-color);
-  font-size: var(--p-font);
-  font-weight: 500;
+img{
+  width: 100%;
+  transition: transform 1s;
+ 
 }
-/* hover */
-.project-box:hover {
-  background-color: #02225a;
+img:hover{
+  transform: translateZ(20px);
 }
-.project-box h3 {
-  color: #fff;
-}
+
+
 /*  portfolio section  */
 .portfolio-content {
   display: grid;
@@ -460,4 +431,63 @@ font-size: 1rem;
     margin-left: 25%;
 
   }
+}
+
+.popup{
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  
+  opacity: 0;
+  margin: 0 0 0 50px;
+  transform: translate(-50%,-50%)scale(1.25);
+  width: 300px;
+  padding: 20px 30px;
+  background-color: #fff;
+  box-shadow: 2px 2px 5px 10px rgba(0,0,0,0.15);
+  border-radius: 10px;
+  transition: top 0ms ease-in-out 200ms,
+            opacity 200ms ease-in-out 0ms,
+              transform 200ms ease-in-out 0ms;
+}
+.popup .close-btn{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 15px;
+  background:#888;
+  color: red;
+  text-align: center;
+  border-radius: 15px;
+  line-height: 15px;
+  cursor: pointer;
+  
+  
+}
+.popup.active{
+  opacity: 1;
+  top: 65%;
+  transform: translate(-50%,-50%)scale(1.25);
+ transition: 2s;
+}
+.popup .form h2{
+  text-align: center;
+  color: #222;
+ font-size: 25px;
+}
+.popup .form .form-element label{
+  font-size: 10px;
+  color: #222;
+}
+button{
+line-height: 10px;
+width: 90px;
+height: 20px;
+border: none;
+outline: none;
+font-size: 10px;
+color: #f5f5f5;
+background: #222;
+border-radius: 2px;
+
 }
