--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@
   --big-font: 3.2rem;
   --medium-font: 1.8rem;
   --p-font: 0.941rem;
+  --lighting-color: #0089b7;
+  --dark-color: #003d62;
+  --darker-color: #003251;
+  --secondary-color: #fff700;
 }
  span{
   color: red;
@@ -179,7 +183,7 @@ a:link{
 
 
 .container{
-  height: 350px;
+  height: 120px;
   margin: auto;
   position: relative;
   width: 90%;
@@ -212,7 +216,7 @@ a:link{
   perspective: 100px;
   box-shadow: 0px 3px 15px rgba(113,115,119,1);
   border-radius: 50px;
-  margin: 25px;
+  margin: 15px;
   padding:20px;
 }
 img{
@@ -221,7 +225,7 @@ img{
  
 }
 img:hover{
-  transform: translateZ(20px);
+  transform: translateZ(50px);
 }
 
 
@@ -229,13 +233,21 @@ img:hover{
 .portfolio-content {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, auto));
-  gap: 1rem;
-  margin-top: 2rem;
+  gap: 5rem;
+margin-top: 2rem;
+  padding: 5px;
 }
-.portfolio-img {
+.portfolio-img   {
   overflow: hidden;
   border-radius: 00.5rem;
 }
+.portfolio-img h5{
+  text-align: center;
+  margin-top: 25px;
+  color: red;
+ 
+}
+
 .portfolio-img img {
   width: 100%;
   display: block;
@@ -245,6 +257,7 @@ img:hover{
   transform: scale(1.1);
   transform: 1s;
 }
+
 /* -------contact-form-------*/
 .conact-form {
   display: grid;
